# VideoPlayerAndroidPro

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/dev/videoandpdf/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/header/: Log.hpp  Utils.h  des_stl.h  rc4_stl.h  rsa_stl.h
app/src/main/cpp/source/: Log.cpp
app/src/main/java/com/dev/kee/video/: ActivitySwipeDetector.java  KeEVideoUtils.java  SwipeInterface.java  VideoItem.java  VideoListActivity.java  VideoPlayerActivity.java
app/src/main/java/com/dev/videoandpdf/: MainActivity.java  MainApp.java
app/src/main/java/com/google/android/exoplayer2/: BaseRenderer.java  C.java  DefaultRenderersFactory.java  ExoPlaybackException.java  ExoPlayer.java  ExoPlayerFactory.java  ExoPlayerImpl.java  ExoPlayerImplInternal.java  Format.java  MediaPeriodQueue.java  (+6 more)
app/src/main/res/drawable/: controller_back_bottom.xml  controller_back_top.xml  ic_arrow_left.xml  ic_lock.xml  ic_next.xml  ic_pause.xml  ic_play.xml  ic_prev.xml  ic_unlock.xml  round_play_video_panel.xml
app/src/main/res/layout/: activity_main.xml  activity_video_list.xml  exo_playback_control_view.xml  exo_simple_player_view.xml  video_item_layout.xml  video_player_activity.xml
app/src/main/res/menu/: option_menu.xml
app/src/main/res/values/: attrx.xml  constants.xml  drawables.xml  idx.xml  strings.xml  themes.xml
app/src/test/java/com/dev/videoandpdf/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+156 files in other folders)
